Started on styling.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,1 +1,21 @@
-<p>Index page</p>
+---
+title: Index Page
+description: Lorem ipsum.
+---
+
+<div class="row">
+  <div class="large-6 large-centered columns">
+    <h1>Index page</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis velit magni doloribus, quibusdam quaerat totam ullam dicta nostrum quasi aut voluptates voluptas similique qui error maxime tempore accusamus natus vero.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur ad provident, vel sequi a illo quis perferendis vero maiores velit officiis error ipsam tenetur, similique, architecto consequatur, quasi mollitia. Distinctio.</p>
+  </div>
+</div>
+
+<div class="row">
+  <div class="large-10 large-centered columns">
+    <h1>Index page</h1>
+    <img src="https://www.placehold.it/800x600" alt="" />
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis velit magni doloribus, quibusdam quaerat totam ullam dicta nostrum quasi aut voluptates voluptas similique qui error maxime tempore accusamus natus vero.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur ad provident, vel sequi a illo quis perferendis vero maiores velit officiis error ipsam tenetur, similique, architecto consequatur, quasi mollitia. Distinctio.</p>
+  </div>
+</div>
