--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,18 +4,45 @@ description: Lorem ipsum.
 ---
 
 <div class="row">
-  <div class="large-6 large-centered columns">
-    <h1>Index page</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis velit magni doloribus, quibusdam quaerat totam ullam dicta nostrum quasi aut voluptates voluptas similique qui error maxime tempore accusamus natus vero.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur ad provident, vel sequi a illo quis perferendis vero maiores velit officiis error ipsam tenetur, similique, architecto consequatur, quasi mollitia. Distinctio.</p>
+  <div class="small-12 large-10 large-centered columns">
+    <h1>Welcome to the online portfolio of <a href="{{root}}about.html">Zach Frank</a>. He can help you design and build websites and online applications.</h1>
   </div>
 </div>
 
-<div class="row">
-  <div class="large-10 large-centered columns">
-    <h1>Index page</h1>
-    <img src="https://www.placehold.it/800x600" alt="" />
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis velit magni doloribus, quibusdam quaerat totam ullam dicta nostrum quasi aut voluptates voluptas similique qui error maxime tempore accusamus natus vero.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur ad provident, vel sequi a illo quis perferendis vero maiores velit officiis error ipsam tenetur, similique, architecto consequatur, quasi mollitia. Distinctio.</p>
+<div class="PortfolioList">
+  <div class="row">
+    <div class="small-12 large-10 large-centered columns">
+      <div class="row collapse small-up-1 medium-up-2">
+        <div class="column">
+          <a href="#">
+            <div class="PortfolioItem">
+              <div class="PortfolioItemDetails">
+                <div class="ContentTable">
+                  <div class="ContentCell">
+                    <p>Asdfasdf</p>
+                  </div>
+                </div>
+              </div>
+              <img src="{{root}}assets/img/feature-native.jpg" alt="NativeKC"  />
+            </a>
+          </div>
+        </div>
+        <div class="column">
+          <img src="{{root}}assets/img/feature-ignite.jpg" alt="Ignite X Training Gym"  />
+        </div>
+        <div class="column">
+          <img src="{{root}}assets/img/feature-instinct.jpg" alt="Instinct Pet Food"  />
+        </div>
+        <div class="column">
+          <img src="{{root}}assets/img/feature-approach.jpg" alt="Approach Global Tennis Event"  />
+        </div>
+        <div class="column">
+          <img src="{{root}}assets/img/feature-frost.jpg" alt="Frost Handbags"  />
+        </div>
+        <div class="column">
+          <img src="{{root}}assets/img/feature-dmh.jpg" alt="Diamond Merckens Hogan"  />
+        </div>
+      </div>
+    </div>
   </div>
 </div>
