Updates to contact and about page. Updates to homepage.

--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -1,4 +1,13 @@
 ---
-title: Page Title
-description: Lorem ipsum.
+title: Contact
+description: Ways to contact Designer and Developer Zach Frank.
 ---
+
+<div class="row">
+  <div class="small-12 large-10 large-centered columns">
+    <h1 class="h1">Contact Zach.</h1>
+    <h2 class="h1"><a href="https://www.linkedin.com/in/zfrankdesign" target="_blank">LinkedIn</a></h2>
+    <h2 class="h1"><a href="mailto:zfrankdesign@gmail.com" target="_blank">zfrankdesign@gmail.com</a></h2>
+    <h2 class="h1"><a href="tel:6515035731">(651) 503 5731</a></h2>
+  </div>
+</div>
