--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,6 +1,6 @@
 ---
-title: Index Page
-description: Lorem ipsum.
+title: Work
+description: Designer and Developer Zach Frank's online portfolio.
 ---
 
 <div class="row">
@@ -13,35 +13,231 @@ description: Lorem ipsum.
   <div class="row">
     <div class="small-12 large-10 large-centered columns">
       <div class="row collapse small-up-1 medium-up-2">
+
         <div class="column">
           <a href="#">
             <div class="PortfolioItem">
               <div class="PortfolioItemDetails">
                 <div class="ContentTable">
                   <div class="ContentCell">
-                    <p>Asdfasdf</p>
+                    <h2 class="h3">NativeKC Website</h2>
+                    <p>Front End</p>
                   </div>
                 </div>
               </div>
-              <img src="{{root}}assets/img/feature-native.jpg" alt="NativeKC"  />
+              <img src="{{root}}assets/img/feature-native.jpg" alt="NativeKC Website"  />
             </a>
           </div>
         </div>
+
         <div class="column">
-          <img src="{{root}}assets/img/feature-ignite.jpg" alt="Ignite X Training Gym"  />
+          <a href="#">
+            <div class="PortfolioItem">
+              <div class="PortfolioItemDetails">
+                <div class="ContentTable">
+                  <div class="ContentCell">
+                    <h2 class="h3">mySidewalk by MindMixer</h2>
+                    <p>Design, Front End</p>
+                  </div>
+                </div>
+              </div>
+              <img src="{{root}}assets/img/feature-mysidewalk.jpg" alt="mySidewalk"  />
+            </a>
+          </div>
         </div>
+
         <div class="column">
-          <img src="{{root}}assets/img/feature-instinct.jpg" alt="Instinct Pet Food"  />
+          <a href="#">
+            <div class="PortfolioItem">
+              <div class="PortfolioItemDetails">
+                <div class="ContentTable">
+                  <div class="ContentCell">
+                    <h2 class="h3">Diamond Merckens Hogan Website</h2>
+                    <p>Design, Front End</p>
+                  </div>
+                </div>
+              </div>
+              <img src="{{root}}assets/img/feature-dmh.jpg" alt="Diamond Merckens Hogan Website"  />
+            </a>
+          </div>
         </div>
+
         <div class="column">
-          <img src="{{root}}assets/img/feature-approach.jpg" alt="Approach Global Tennis Event"  />
+          <a href="#">
+            <div class="PortfolioItem">
+              <div class="PortfolioItemDetails">
+                <div class="ContentTable">
+                  <div class="ContentCell">
+                    <h2 class="h3">Watts of Love Website</h2>
+                    <p>Design</p>
+                  </div>
+                </div>
+              </div>
+              <img src="{{root}}assets/img/feature-wattsoflove.jpg" alt="Watts of Love Website"  />
+            </a>
+          </div>
         </div>
+
         <div class="column">
-          <img src="{{root}}assets/img/feature-frost.jpg" alt="Frost Handbags"  />
+          <a href="#">
+            <div class="PortfolioItem">
+              <div class="PortfolioItemDetails">
+                <div class="ContentTable">
+                  <div class="ContentCell">
+                    <h2 class="h3">National Pork Board Website</h2>
+                    <p>Design, Front End</p>
+                  </div>
+                </div>
+              </div>
+              <img src="{{root}}assets/img/feature-porkbeinspired.jpg" alt="National Pork Board Website"  />
+            </a>
+          </div>
         </div>
+
         <div class="column">
-          <img src="{{root}}assets/img/feature-dmh.jpg" alt="Diamond Merckens Hogan"  />
+          <a href="#">
+            <div class="PortfolioItem">
+              <div class="PortfolioItemDetails">
+                <div class="ContentTable">
+                  <div class="ContentCell">
+                    <h2 class="h3">Ignite Cross Training Gym Website</h2>
+                    <p>Design, Front End</p>
+                  </div>
+                </div>
+              </div>
+              <img src="{{root}}assets/img/feature-ignite.jpg" alt="Ignite Cross Training Gym Website"  />
+            </a>
+          </div>
         </div>
+
+        <!-- <div class="column">
+          <a href="#">
+            <div class="PortfolioItem">
+              <div class="PortfolioItemDetails">
+                <div class="ContentTable">
+                  <div class="ContentCell">
+                    <h2 class="h3">Natures Variety Pet Food</h2>
+                    <p>Front End</p>
+                  </div>
+                </div>
+              </div>
+              <img src="{{root}}assets/img/feature-instinct.jpg" alt="Instinct Pet Food"  />
+            </a>
+          </div>
+        </div> -->
+
+        <div class="column">
+          <a href="#">
+            <div class="PortfolioItem">
+              <div class="PortfolioItemDetails">
+                <div class="ContentTable">
+                  <div class="ContentCell">
+                    <h2 class="h3">Approach Global Website</h2>
+                    <p>Design, Front End</p>
+                  </div>
+                </div>
+              </div>
+              <img src="{{root}}assets/img/feature-approach.jpg" alt="Approach Global Website"  />
+            </a>
+          </div>
+        </div>
+
+        <div class="column">
+          <a href="#">
+            <div class="PortfolioItem">
+              <div class="PortfolioItemDetails">
+                <div class="ContentTable">
+                  <div class="ContentCell">
+                    <h2 class="h3">Frost Handbags Website</h2>
+                    <p>Front End</p>
+                  </div>
+                </div>
+              </div>
+              <img src="{{root}}assets/img/feature-frost.jpg" alt="Frost Handbags Website"  />
+            </a>
+          </div>
+        </div>
+
+        <div class="column">
+          <a href="#">
+            <div class="PortfolioItem">
+              <div class="PortfolioItemDetails">
+                <div class="ContentTable">
+                  <div class="ContentCell">
+                    <h2 class="h3">MMGY Website</h2>
+                    <p>Design</p>
+                  </div>
+                </div>
+              </div>
+              <img src="{{root}}assets/img/feature-mmgy.jpg" alt="MMGY Website"  />
+            </a>
+          </div>
+        </div>
+
+        <div class="column">
+          <a href="#">
+            <div class="PortfolioItem">
+              <div class="PortfolioItemDetails">
+                <div class="ContentTable">
+                  <div class="ContentCell">
+                    <h2 class="h3">Ski Utah Website</h2>
+                    <p>Design</p>
+                  </div>
+                </div>
+              </div>
+              <img src="{{root}}assets/img/feature-skiutah.jpg" alt="Ski Utah Website"  />
+            </a>
+          </div>
+        </div>
+
+        <div class="column">
+          <a href="#">
+            <div class="PortfolioItem">
+              <div class="PortfolioItemDetails">
+                <div class="ContentTable">
+                  <div class="ContentCell">
+                    <h2 class="h3">Visit Cabarrus County Website</h2>
+                    <p>Design</p>
+                  </div>
+                </div>
+              </div>
+              <img src="{{root}}assets/img/feature-cabarrus.jpg" alt="Visit Cabarrus County Website"  />
+            </a>
+          </div>
+        </div>
+
+        <div class="column">
+          <a href="#">
+            <div class="PortfolioItem">
+              <div class="PortfolioItemDetails">
+                <div class="ContentTable">
+                  <div class="ContentCell">
+                    <h2 class="h3">CityWay Website</h2>
+                    <p>Design</p>
+                  </div>
+                </div>
+              </div>
+              <img src="{{root}}assets/img/feature-cityway.jpg" alt="CityWay Website"  />
+            </a>
+          </div>
+        </div>
+
+        <div class="column">
+          <a href="#">
+            <div class="PortfolioItem">
+              <div class="PortfolioItemDetails">
+                <div class="ContentTable">
+                  <div class="ContentCell">
+                    <h2 class="h3">Consul Website</h2>
+                    <p>Design, Front End</p>
+                  </div>
+                </div>
+              </div>
+              <img src="{{root}}assets/img/feature-consul.jpg" alt="Consul Website"  />
+            </a>
+          </div>
+        </div>
+
       </div>
     </div>
   </div>
