--- a/src/pages/work/mysidewalk.html
+++ b/src/pages/work/mysidewalk.html
@@ -3,4 +3,8 @@ title: Page Title
 description: Lorem ipsum.
 ---
 
-<p>mySidewalk page</p>
+<div class="row">
+  <div class="small-12 large-10 large-centered columns">
+    <p>mySidewalk page</p>
+  </div>
+</div>
