--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -1,29 +1,29 @@
 ---
-title: Page Title
-description: Lorem ipsum.
+title: About
+description: Designer and Developer Zach Frank's online resume.
 ---
 
 <div class="row">
   <div class="small-12 large-10 large-centered columns">
-    <section>
+    <section class="ContentSection">
       <h1>Profile</h1>
-      <p>Senior designer and front end developer with more than 8+ years experience designing and building for the web. Flexible in different working environments having worked at a startup, as well as large and small agencies. Focused primarily on helping agile teams collaborate, design and build CMS websites or client-side web apps.</p>
+      <p class="lead">Senior designer and front end developer with more than 8+ years experience designing and building for the web. Flexible in different working environments having worked at a startup, as well as large and small agencies. Focused primarily on helping agile teams collaborate, design and build CMS websites or client-side web apps. Lived in Kansas City, MO, Nashville, TN, and now currently lives near the Twin Cities of the great state of Minnesota</p>
     </section>
 
-    <section>
+    <section class="ContentSection">
       <h1>Experience</h1>
-      <ul>
-        <li>
+      <ul class="ExperienceList">
+        <li class="ExperienceListItem">
           <h2><a href="https://www.nativekc.com/" target="_blank">Native Digital LLC</a></h2>
-          <p>Designer + Developer | Remote | April 2015 &ndash; Present</p>
+          <p class="lead">Designer + Developer <em>• Remote • April 2015 &ndash; Present</em></p>
           <ul>
             <li>Collaborate with other designers and content specialists on the design and front end development solutions for various clients including <a href="http://www.evolvedigitallabs.com/" target="_blank">Evolve Digital Labs</a> and <a href="http://www.approachglobal.com/" target="_blank">Approach Global</a>.</li>
             <li>Front end theme development for internal marketing website powered by Wordpress.</li>
           </ul>
         </li>
-        <li>
+        <li class="ExperienceListItem">
           <h2><a href="http://www.mysidewalk.com/" target="_blank">mySidewalk by MindMixer</a></h2>
-          <p>Product Designer + Developer | Kansas City, MO | April 2014 &ndash; July 2015</p>
+          <p class="lead">Product Designer + Developer <em>• Kansas City, MO • April 2014 &ndash; July 2015</em></p>
           <ul>
             <li>Cut my teeth in the world of startups and product design.</li>
             <li>Collaborated with other product designers, product managers, writers, developers and key stakeholders to develop user flows, wireframes, and visual designs for new and existing product features for the companies&rsquo; responsive web and mobile applications.</li>
@@ -34,9 +34,9 @@ description: Lorem ipsum.
             <li>Destroyed and humiliated people (sometimes in front of their children) in <a href="https://www.easports.com/fifa" target="_blank">FIFA</a> on a daily basis.</li>
           </ul>
         </li>
-        <li>
+        <li class="ExperienceListItem">
           <h2><a href="http://www.dmhadv.com/" target="_blank">Diamond Merckens Hogan</a></h2>
-          <p>Designer + Developer | Kansas City, MO | February 2014 &ndash; April 2014</p>
+          <p class="lead">Designer + Developer <em>• Kansas City, MO • February 2014 &ndash; April 2014</em></p>
           <ul>
             <li>Collaborated with other designers, developers, and writers to develop visual design concepts for various advertising initiatives and front end development solutions of various clients including <a href="http://www.porkbeinspired.com/" target="_blank">The National Pork Board</a>, <a href="http://www.ceva.us/" target="_blank">Ceva Animal Health</a>, and <a href="http://www.wattsoflove.org/" target="_blank">Watts of Love</a>.</li>
             <li>Developed front end themes for Wordpress.</li>
@@ -44,9 +44,9 @@ description: Lorem ipsum.
             <li>Worked on new business concepting and pitch creative.</li>
           </ul>
         </li>
-        <li>
+        <li class="ExperienceListItem">
           <h2><a href="http://www.mmgyglobal.com/" target="_blank">MMGY Global</a></h2>
-          <p>Interactive Art Director | Kansas City, MO | May 2008 &ndash; January 2014</p>
+          <p class="lead">Interactive Art Director <em>• Kansas City, MO • May 2008 &ndash; January 2014</em></p>
           <ul>
             <li>Collaborated with other designers, art directors, creative directors, developers, writers, and project teams to develop visual design concepts for various advertising initiatives and websites for clients in the travel and tourism space including the <a href="https://www.wyomingtourism.org/" target="_blank">Wyoming Tourism Office</a>, the Colorado Office of Tourism, <a href="https://www.theworldwar.org/" target="_blank">The National World War One Museum</a>, and <a href="http://www.cityway.com/" target="_blank">CityWay</a>.</li>
             <li>Worked on internal portfolio website visual design and maintenance.</li>
@@ -61,67 +61,69 @@ description: Lorem ipsum.
       </ul>
     </section>
 
-    <section>
+    <section class="ContentSection">
       <h1>Education</h1>
-      <ul>
-        <li>
-          <h2>University of Minnesota Duluth</h2>
-          <p>B.F.A. Graphic Design Major | 2007</p>
-          <p>Webmaster for Student Design Organization.</p>
+      <ul class="EducationList">
+        <li class="EducationListItem">
+          <h2><a href="http://www.d.umn.edu/" target="_blank">University of Minnesota Duluth</a></h2>
+          <p class="lead"><em>B.F.A. Graphic Design Major • 2007</em></p>
         </li>
       </ul>
     </section>
 
-    <section>
+    <section class="ContentSection">
       <h1>Skills</h1>
-      <h2>Professional Skillset</h2>
-      <ul>
-        <li>Sketching, Wireframing &amp; Prototyping</li>
-        <li>Interface Design</li>
-        <li>Responsive Design</li>
-        <li>HTML5 &amp; CSS3</li>
-        <li>Sass</li>
-      </ul>
-      <h2>Working Knowledge</h2>
-      <ul>
-        <li>Javascript &amp; jQuery</li>
-        <li>Responsive HTML Email</li>
-        <li>AngularJS</li>
-        <li>Wordpress &amp; PHP</li>
-      </ul>
-      <h2>Tools</h2>
-      <ul>
-        <li>Adobe Creative Suite</li>
-        <li>Sketch</li>
-        <li>InVision</li>
-        <li>Atom</li>
-        <li>Zurb&rsquo;s Foundation Framework</li>
-        <li>Unix Command Line</li>
-        <li>Git</li>
-      </ul>
-    </section>
-
-    <section>
-      <h1>Interests</h1>
-      <ul>
-        <li>Atomic Design Systems</li>
-        <li>Design Sprints</li>
-        <li>Efficiency</li>
-        <li>Information Design/Overload</li>
+      <div class="row small-up-1 medium-up-3">
+        <div class="column">
+          <h2 class="h4">Professional Skillset</h2>
+          <ul>
+            <li>Sketching, Wireframing &amp; Prototyping</li>
+            <li>Interface Design</li>
+            <li>Responsive Design</li>
+            <li>HTML5 &amp; CSS3</li>
+            <li>Sass</li>
+            <li>HTML Email Design &amp; Development</li>
+          </ul>
+        </div>
+        <div class="column">
+          <h2 class="h4">Working Knowledge</h2>
+          <ul>
+            <li>Javascript &amp; jQuery</li>
+            <li>AngularJS</li>
+            <li>Wordpress &amp; PHP</li>
+          </ul>
+        </div>
+        <div class="column">
+          <h2 class="h4">Tools</h2>
+          <ul>
+            <li>Adobe Creative Suite</li>
+            <li>Sketch</li>
+            <li>InVision</li>
+            <li>Atom</li>
+            <li>Zurb&rsquo;s Foundation Framework</li>
+            <li>Unix Command Line</li>
+            <li>Git</li>
+          </ul>
+        </div>
+      </div>
+      <h2 class="h1">Interests</h2>
+      <ul class="InterestsList">
+        <li>User Experience Design</li>
+        <li>Information Design</li>
         <li>Interaction Design</li>
         <li>Product Design</li>
-        <li>Sustainability</li>
         <li>Typography</li>
-        <li>User Experience Design &amp; Usability</li>
+        <li>Design Systems</li>
+        <li>Design Sprints</li>
+        <li>Efficiency</li>
+        <li>Sustainability</li>
         <li>Aviation &amp; Flight Simulation</li>
-        <li>Backpacking, Hiking &amp; Camping</li>
-        <li>Flow</li>
         <li>Gaming</li>
-        <li>Gardening</li>
+        <li>Backpacking, Hiking &amp; Camping</li>
         <li>Hunting &amp; Fishing</li>
+        <li>Gardening</li>
         <li>Music</li>
         <li>Social Economics</li>
-        <li>Survival Skills</li>
       </ul>
     </section>
   </div>
