Work page work.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -15,7 +15,7 @@ description: Designer and Developer Zach Frank's online portfolio.
       <div class="row collapse small-up-1 medium-up-2">
 
         <div class="column">
-          <a href="#">
+          <a href="{{root}}work/nativekc.html">
             <div class="PortfolioItem">
               <div class="PortfolioItemDetails">
                 <div class="ContentTable">
@@ -31,7 +31,7 @@ description: Designer and Developer Zach Frank's online portfolio.
         </div>
 
         <div class="column">
-          <a href="#">
+          <a href="{{root}}work/mysidewalk.html">
             <div class="PortfolioItem">
               <div class="PortfolioItemDetails">
                 <div class="ContentTable">
@@ -68,12 +68,12 @@ description: Designer and Developer Zach Frank's online portfolio.
               <div class="PortfolioItemDetails">
                 <div class="ContentTable">
                   <div class="ContentCell">
-                    <h2 class="h3">Watts of Love Website</h2>
-                    <p>Design</p>
+                    <h2 class="h3">Ignite Cross Training Gym Website</h2>
+                    <p>Design, Front End</p>
                   </div>
                 </div>
               </div>
-              <img src="{{root}}assets/img/feature-wattsoflove.jpg" alt="Watts of Love Website"  />
+              <img src="{{root}}assets/img/feature-ignite.jpg" alt="Ignite Cross Training Gym Website"  />
             </a>
           </div>
         </div>
@@ -100,12 +100,12 @@ description: Designer and Developer Zach Frank's online portfolio.
               <div class="PortfolioItemDetails">
                 <div class="ContentTable">
                   <div class="ContentCell">
-                    <h2 class="h3">Ignite Cross Training Gym Website</h2>
-                    <p>Design, Front End</p>
+                    <h2 class="h3">Watts of Love Website</h2>
+                    <p>Design</p>
                   </div>
                 </div>
               </div>
-              <img src="{{root}}assets/img/feature-ignite.jpg" alt="Ignite Cross Training Gym Website"  />
+              <img src="{{root}}assets/img/feature-wattsoflove.jpg" alt="Watts of Love Website"  />
             </a>
           </div>
         </div>
@@ -218,6 +218,38 @@ description: Designer and Developer Zach Frank's online portfolio.
                 </div>
               </div>
               <img src="{{root}}assets/img/feature-cityway.jpg" alt="CityWay Website"  />
+            </a>
+          </div>
+        </div>
+
+        <div class="column">
+          <a href="#">
+            <div class="PortfolioItem">
+              <div class="PortfolioItemDetails">
+                <div class="ContentTable">
+                  <div class="ContentCell">
+                    <h2 class="h3">National WW1 Museum Website</h2>
+                    <p>Design</p>
+                  </div>
+                </div>
+              </div>
+              <img src="{{root}}assets/img/feature-ww1.jpg" alt="National WW1 Museum Website"  />
+            </a>
+          </div>
+        </div>
+
+        <div class="column">
+          <a href="#">
+            <div class="PortfolioItem">
+              <div class="PortfolioItemDetails">
+                <div class="ContentTable">
+                  <div class="ContentCell">
+                    <h2 class="h3">Wyoming Tourism Website</h2>
+                    <p>Design</p>
+                  </div>
+                </div>
+              </div>
+              <img src="{{root}}assets/img/feature-wyoming.jpg" alt="Wyoming Tourism Website"  />
             </a>
           </div>
         </div>
