--- a/src/pages/work/mysidewalk.html
+++ b/src/pages/work/mysidewalk.html
@@ -1,6 +1,6 @@
 ---
-title: Page Title
-description: Lorem ipsum.
+title: mySidewalk by MindMixer • Work
+description: Product Design, UX Design, Website Front End Development
 ---
 
 <div class="row">
