Adding project pages.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -47,7 +47,7 @@ description: Designer and Developer Zach Frank's online portfolio.
         </div>
 
         <div class="column">
-          <a href="#">
+          <a href="{{root}}work/dmh.html">
             <div class="PortfolioItem">
               <div class="PortfolioItemDetails">
                 <div class="ContentTable">
@@ -63,7 +63,7 @@ description: Designer and Developer Zach Frank's online portfolio.
         </div>
 
         <div class="column">
-          <a href="#">
+          <a href="{{root}}work/ignite.html">
             <div class="PortfolioItem">
               <div class="PortfolioItemDetails">
                 <div class="ContentTable">
@@ -79,7 +79,7 @@ description: Designer and Developer Zach Frank's online portfolio.
         </div>
 
         <div class="column">
-          <a href="#">
+          <a href="{{root}}work/npb.html">
             <div class="PortfolioItem">
               <div class="PortfolioItemDetails">
                 <div class="ContentTable">
@@ -95,7 +95,7 @@ description: Designer and Developer Zach Frank's online portfolio.
         </div>
 
         <div class="column">
-          <a href="#">
+          <a href="{{root}}work/wattsoflove.html">
             <div class="PortfolioItem">
               <div class="PortfolioItemDetails">
                 <div class="ContentTable">
@@ -110,24 +110,8 @@ description: Designer and Developer Zach Frank's online portfolio.
           </div>
         </div>
 
-        <!-- <div class="column">
-          <a href="#">
-            <div class="PortfolioItem">
-              <div class="PortfolioItemDetails">
-                <div class="ContentTable">
-                  <div class="ContentCell">
-                    <h2 class="h3">Natures Variety Pet Food</h2>
-                    <p>Front End</p>
-                  </div>
-                </div>
-              </div>
-              <img src="{{root}}assets/img/feature-instinct.jpg" alt="Instinct Pet Food"  />
-            </a>
-          </div>
-        </div> -->
-
         <div class="column">
-          <a href="#">
+          <a href="{{root}}work/approach.html">
             <div class="PortfolioItem">
               <div class="PortfolioItemDetails">
                 <div class="ContentTable">
@@ -143,7 +127,7 @@ description: Designer and Developer Zach Frank's online portfolio.
         </div>
 
         <div class="column">
-          <a href="#">
+          <a href="{{root}}work/frost.html">
             <div class="PortfolioItem">
               <div class="PortfolioItemDetails">
                 <div class="ContentTable">
@@ -159,12 +143,12 @@ description: Designer and Developer Zach Frank's online portfolio.
         </div>
 
         <div class="column">
-          <a href="#">
+          <a href="{{root}}work/mmgy.html">
             <div class="PortfolioItem">
               <div class="PortfolioItemDetails">
                 <div class="ContentTable">
                   <div class="ContentCell">
-                    <h2 class="h3">MMGY Website</h2>
+                    <h2 class="h3">MMGY Global Website</h2>
                     <p>Design</p>
                   </div>
                 </div>
@@ -175,7 +159,7 @@ description: Designer and Developer Zach Frank's online portfolio.
         </div>
 
         <div class="column">
-          <a href="#">
+          <a href="{{root}}work/skiutah.html">
             <div class="PortfolioItem">
               <div class="PortfolioItemDetails">
                 <div class="ContentTable">
@@ -191,7 +175,7 @@ description: Designer and Developer Zach Frank's online portfolio.
         </div>
 
         <div class="column">
-          <a href="#">
+          <a href="{{root}}work/visitcabarrus.html">
             <div class="PortfolioItem">
               <div class="PortfolioItemDetails">
                 <div class="ContentTable">
@@ -207,7 +191,7 @@ description: Designer and Developer Zach Frank's online portfolio.
         </div>
 
         <div class="column">
-          <a href="#">
+          <a href="{{root}}work/cityway.html">
             <div class="PortfolioItem">
               <div class="PortfolioItemDetails">
                 <div class="ContentTable">
@@ -223,7 +207,7 @@ description: Designer and Developer Zach Frank's online portfolio.
         </div>
 
         <div class="column">
-          <a href="#">
+          <a href="{{root}}work/ww1.html">
             <div class="PortfolioItem">
               <div class="PortfolioItemDetails">
                 <div class="ContentTable">
@@ -239,7 +223,7 @@ description: Designer and Developer Zach Frank's online portfolio.
         </div>
 
         <div class="column">
-          <a href="#">
+          <a href="{{root}}work/wyomingtourism.html">
             <div class="PortfolioItem">
               <div class="PortfolioItemDetails">
                 <div class="ContentTable">
@@ -255,7 +239,7 @@ description: Designer and Developer Zach Frank's online portfolio.
         </div>
 
         <div class="column">
-          <a href="#">
+          <a href="{{root}}work/consul.html">
             <div class="PortfolioItem">
               <div class="PortfolioItemDetails">
                 <div class="ContentTable">
