--- a/src/pages/work/_work.html
+++ b/src/pages/work/_work.html
@@ -1,17 +1,15 @@
 ---
-title: NativeKC Website • Work
+title: Project Title • Work
 description: Website Front End Development
 ---
 
 <header class="WorkDetailHeader">
   <div class="row">
     <div class="small-12 large-10 large-centered columns">
-      <h1 class="clearfix">NativeKC Website</h1>
-      <h2 class="h4 float-left">Front End • <a href="http://www.nativekc.com" target="_blank">Visit Website</a></h2>
-      <ul class="pagination float-right hide-for-small-only" role="navigation" aria-label="Pagination">
-        <li class="pagination-previous disabled">Previous</li>
-        <li class="pagination-next"><a href="{{root}}work/mysidewalk.html" aria-label="Next page">Next</a></li>
-      </ul>
+      <h1>NativeKC Website</h1>
+      <h2 class="h4">Front End • <a href="http://www.nativekc.com" target="_blank">Visit Website</a></h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum impedit facilis dignissimos, reiciendis molestiae, laudantium incidunt magnam accusantium dolorem minus deleniti eum ab officia unde. Sit dolor iure esse perspiciatis.</p>
+
     </div>
   </div>
 </header>
@@ -19,6 +17,13 @@ description: Website Front End Development
 <div class="row">
   <div class="small-12 large-10 large-centered columns">
     <img src="{{root}}assets/img/work/nativekc-01.jpg" class="work-img" alt="" />
+
+    <!-- <div class="row">
+      <div class="small-12 medium-8 medium-offset-1 columns end">
+        <p class="work-caption">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, adipisci optio, aspernatur accusantium praesentium mollitia necessitatibus obcaecati delectus exercitationem repudiandae reiciendis recusandae asperiores blanditiis. Autem odit tenetur earum obcaecati sunt.</p>
+      </div>
+    </div> -->
+
     <img src="{{root}}assets/img/work/nativekc-02.jpg" class="work-img" alt="" />
     <img src="{{root}}assets/img/work/nativekc-03.jpg" class="work-img" alt="" />
 
@@ -33,11 +38,6 @@ description: Website Front End Development
         <img src="{{root}}assets/img/work/nativekc-07.jpg" class="work-img" alt="" />
       </div>
     </div>
-
-    <ul class="pagination float-right" role="navigation" aria-label="Pagination">
-      <li class="pagination-previous disabled">Previous</li>
-      <li class="pagination-next"><a href="{{root}}work/mysidewalk.html" aria-label="Next page">Next</a></li>
-    </ul>
 
   </div>
 </div>
