--- a/src/pages/work/mysidewalk.html
+++ b/src/pages/work/mysidewalk.html
@@ -3,8 +3,27 @@ title: mySidewalk by MindMixer • Work
 description: Product Design, UX Design, Website Front End Development
 ---
 
+<header class="WorkDetailHeader">
+  <div class="row">
+    <div class="small-12 large-10 large-centered columns">
+      <h1 class="clearfix">mySidewalk by MindMixer</h1>
+      <h2 class="h4 float-left">Design, Front End</h2>
+      <ul class="pagination float-right hide-for-small-only" role="navigation" aria-label="Pagination">
+        <li class="pagination-previous"><a href="{{root}}work/nativekc.html" aria-label="Next page">Previous</a></li>
+        <li class="pagination-next"><a href="{{root}}work/dmh.html" aria-label="Next page">Next</a></li>
+      </ul>
+    </div>
+  </div>
+</header>
+
 <div class="row">
   <div class="small-12 large-10 large-centered columns">
-    <p>mySidewalk page</p>
+    <img src="{{root}}assets/img/work/nativekc-01.jpg" class="work-img" alt="" />
+
+    <ul class="pagination float-right" role="navigation" aria-label="Pagination">
+      <li class="pagination-previous"><a href="{{root}}work/nativekc.html" aria-label="Next page">Previous</a></li>
+      <li class="pagination-next"><a href="{{root}}work/dmh.html" aria-label="Next page">Next</a></li>
+    </ul>
+
   </div>
 </div>
